--- a/www/index.html
+++ b/www/index.html
@@ -25,15 +25,15 @@
 
     <title>Epsilon 5.0</title>
 
-    <link rel="stylesheet" type="text/css" href="/styles/style.css">
-    <link rel="stylesheet" type="text/css" href="/styles/menu.css">
-    <link rel="stylesheet" type="text/css" href="/styles/framework.css">
-    <link rel="stylesheet" type="text/css" href="/styles/font-awesome.css">
-    <link rel="stylesheet" type="text/css" href="/styles/custom.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/menu.css">
+    <link rel="stylesheet" type="text/css" href="styles/framework.css">
+    <link rel="stylesheet" type="text/css" href="styles/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="styles/custom.css">
 
-    <script type="text/javascript" src="/scripts/jquery.js"></script>
-    <script type="text/javascript" src="/scripts/plugins.js"></script>
-    <script type="text/javascript" src="/scripts/custom.js"></script>
+    <script type="text/javascript" src="scripts/jquery.js"></script>
+    <script type="text/javascript" src="scripts/plugins.js"></script>
+    <script type="text/javascript" src="scripts/custom.js"></script>
 </head>
 
 <body>
