--- a/www/index.html
+++ b/www/index.html
@@ -52,23 +52,23 @@
             <div id="page-content-scroll">
                 <div class="coverpage-slider homepage-coverpage-slider">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide cover-slide cover-screen" style="background-image:url(/images/demo/modern-skopje.jpg);">
+                        <div class="swiper-slide cover-slide cover-screen" style="background-image:url(images/demo/modern-skopje.jpg);">
                             <div class="homepage-cover">
                                 <h4>Modernistic Tour <strong class="color-red-dark">Skopje</strong></h4>
                                 <p>Денешната слика за архитектурата на Скопје е настаната како резултат на повеќеслојни модернизациски потфати во текот на 20 век, кои успеале да претворат една отоманска паланка развиена...</p>
                                 <div class="decoration"></div>
                                 <!--<a href="#" class="share-cover show-share-bottom"><i class="fa fa-refresh"></i> Share Page</a>-->
-                                <a href="/tour.html" class="read-cover">Open Tour<i class="fa fa-arrow-right"></i></a>
+                                <a href="tour.html" class="read-cover">Open Tour<i class="fa fa-arrow-right"></i></a>
                             </div>
                             <div class="overlay"></div>
                         </div>
-                        <div class="swiper-slide cover-slide cover-screen" style="background-image:url(/images/demo/modern-skopje1.jpg);">
+                        <div class="swiper-slide cover-slide cover-screen" style="background-image:url(images/demo/modern-skopje1.jpg);">
                             <div class="homepage-cover">
                                 <h4>Museum Tour <strong class="color-red-dark">Skopje</strong></h4>
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a ga...</p>
                                 <div class="decoration"></div>
                                 <<!--a href="#" class="share-cover show-share-bottom"><i class="fa fa-refresh"></i> Share Page</a>-->
-                                <a href="/tour.html" class="read-cover">Open Tour<i class="fa fa-arrow-right"></i></a>
+                                <a href="tour.html" class="read-cover">Open Tour<i class="fa fa-arrow-right"></i></a>
                             </div>
                             <div class="overlay"></div>
                         </div>
@@ -89,25 +89,25 @@
                 <!--<p class="sidebar-divider">Navigation</p>-->
                 <div class="sidebar-menu">
                     <div>
-                        <a class="menu-item" href="/index.html">
+                        <a class="menu-item" href="index.html">
                             <i class="fa fa-home bg-red-dark"></i>
                             <em>Home</em>
                         </a>
                     </div>
                     <div>
-                        <a class="menu-item" href="/tour.html">
+                        <a class="menu-item" href="tour.html">
                             <i class="fa fa-navicon bg-green-dark"></i>
                             <em>Modernistic Tour</em>
                         </a>
                     </div>
                     <div>
-                        <a class="menu-item" href="/tour.html">
+                        <a class="menu-item" href="tour.html">
                             <i class="fa fa-navicon bg-green-dark"></i>
                             <em>Other Tour</em>
                         </a>
                     </div>
                     <div>
-                        <a class="menu-item" href="/contact.html">
+                        <a class="menu-item" href="contact.html">
                             <i class="fa fa-comment-o bg-blue-dark"></i>
                             <em>Contact Us</em>
                         </a>
