--- a/www/tour.html
+++ b/www/tour.html
@@ -224,7 +224,7 @@
 </body><a href="#" class="back-to-top-badge"><i class="fa fa-caret-up"></i>Back to top</a>
 
 
-<!--<script type="text/javascript">
+<script type="text/javascript">
     $("document").ready(function () {
         LoadMap();
     })
@@ -281,5 +281,5 @@
         }
     }
 
-</script>-->
+</script>
 
