--- a/www/contact.html
+++ b/www/contact.html
@@ -25,15 +25,15 @@
 
     <title>Epsilon 5.0</title>
 
-    <link rel="stylesheet" type="text/css" href="/styles/style.css">
-    <link rel="stylesheet" type="text/css" href="/styles/menu.css">
-    <link rel="stylesheet" type="text/css" href="/styles/framework.css">
-    <link rel="stylesheet" type="text/css" href="/styles/font-awesome.css">
-    <link rel="stylesheet" type="text/css" href="/styles/custom.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/menu.css">
+    <link rel="stylesheet" type="text/css" href="styles/framework.css">
+    <link rel="stylesheet" type="text/css" href="styles/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="styles/custom.css">
 
-    <script type="text/javascript" src="/scripts/jquery.js"></script>
-    <script type="text/javascript" src="/scripts/plugins.js"></script>
-    <script type="text/javascript" src="/scripts/custom.js"></script>
+    <script type="text/javascript" src="scripts/jquery.js"></script>
+    <script type="text/javascript" src="scripts/plugins.js"></script>
+    <script type="text/javascript" src="scripts/custom.js"></script>
 </head>
 
 <body>
@@ -166,25 +166,25 @@
                 <!--<p class="sidebar-divider">Navigation</p>-->
                 <div class="sidebar-menu">
                     <div>
-                        <a class="menu-item" href="/index.html">
+                        <a class="menu-item" href="index.html">
                             <i class="fa fa-home bg-red-dark"></i>
                             <em>Home</em>
                         </a>
                     </div>
                     <div>
-                        <a class="menu-item" href="/tour.html">
+                        <a class="menu-item" href="tour.html">
                             <i class="fa fa-navicon bg-green-dark"></i>
                             <em>Modernistic Tour</em>
                         </a>
                     </div>
                     <div>
-                        <a class="menu-item" href="/tour.html">
+                        <a class="menu-item" href="tour.html">
                             <i class="fa fa-navicon bg-green-dark"></i>
                             <em>Other Tour</em>
                         </a>
                     </div>
                     <div>
-                        <a class="menu-item" href="/contact.html">
+                        <a class="menu-item" href="contact.html">
                             <i class="fa fa-comment-o bg-blue-dark"></i>
                             <em>Contact Us</em>
                         </a>
