--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" type="text/css" href="styles/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="styles/custom.css">
 
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyD06lrBSO9CM6KIOt6lajeJCs88RXvvdRc"></script>
     <script type="text/javascript" src="scripts/jquery.js"></script>
     <script type="text/javascript" src="scripts/plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
