--- a/www/place.html
+++ b/www/place.html
@@ -25,15 +25,15 @@
 
     <title>Epsilon 5.0</title>
 
-    <link rel="stylesheet" type="text/css" href="/styles/style.css">
-    <link rel="stylesheet" type="text/css" href="/styles/menu.css">
-    <link rel="stylesheet" type="text/css" href="/styles/framework.css">
-    <link rel="stylesheet" type="text/css" href="/styles/font-awesome.css">
-    <link rel="stylesheet" type="text/css" href="/styles/custom.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/menu.css">
+    <link rel="stylesheet" type="text/css" href="styles/framework.css">
+    <link rel="stylesheet" type="text/css" href="styles/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="styles/custom.css">
 
-    <script type="text/javascript" src="/scripts/jquery.js"></script>
-    <script type="text/javascript" src="/scripts/plugins.js"></script>
-    <script type="text/javascript" src="/scripts/custom.js"></script>
+    <script type="text/javascript" src="scripts/jquery.js"></script>
+    <script type="text/javascript" src="scripts/plugins.js"></script>
+    <script type="text/javascript" src="scripts/custom.js"></script>
 </head>
 
 <body>
@@ -53,7 +53,7 @@
                 <div class="homepage-slider full-bottom">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img class="responsive-image" src="/images/demo/poshta1.jpg" alt="img">
+                            <img class="responsive-image" src="images/demo/poshta1.jpg" alt="img">
                             <div class="slider-caption">
                                 <!--<h3 class="center-text">Телекомуникациски Центар Скопје</h3>-->
                                 <!--<p class="center-text">Meet Sidebars! Power and elegance!</p>-->
@@ -61,7 +61,7 @@
                             <div class="overlay"></div>
                         </div>
                         <div class="swiper-slide">
-                            <img class="responsive-image" src="/images/demo/poshta2.jpg" alt="img">
+                            <img class="responsive-image" src="images/demo/poshta2.jpg" alt="img">
                             <!--<div class="slider-caption">
                                 <h3 class="left-text">Tons of features</h3>
                                 <p class="left-text">Just a copy and paste away, easy to use!!</p>
@@ -69,7 +69,7 @@
                             <div class="overlay"></div>
                         </div>
                         <div class="swiper-slide">
-                            <img class="responsive-image" src="/images/demo/poshta3.jpg" alt="img">
+                            <img class="responsive-image" src="images/demo/poshta3.jpg" alt="img">
                             <!--<div class="slider-caption">
                                 <h3 class="right-text">Clean code</h3>
                                 <p class="right-text">Use it as a site template or convert it to an app</p>
@@ -119,25 +119,25 @@
                 <!--<p class="sidebar-divider">Navigation</p>-->
                 <div class="sidebar-menu">
                     <div>
-                        <a class="menu-item" href="/index.html">
+                        <a class="menu-item" href="index.html">
                             <i class="fa fa-home bg-red-dark"></i>
                             <em>Home</em>
                         </a>
                     </div>
                     <div>
-                        <a class="menu-item" href="/tour.html">
+                        <a class="menu-item" href="tour.html">
                             <i class="fa fa-navicon bg-green-dark"></i>
                             <em>Modernistic Tour</em>
                         </a>
                     </div>
                     <div>
-                        <a class="menu-item" href="/tour.html">
+                        <a class="menu-item" href="tour.html">
                             <i class="fa fa-navicon bg-green-dark"></i>
                             <em>Other Tour</em>
                         </a>
                     </div>
                     <div>
-                        <a class="menu-item" href="/contact.html">
+                        <a class="menu-item" href="contact.html">
                             <i class="fa fa-comment-o bg-blue-dark"></i>
                             <em>Contact Us</em>
                         </a>
