--- a/www/tour.html
+++ b/www/tour.html
@@ -25,16 +25,16 @@
 
     <title>Epsilon 5.0</title>
 
-    <link rel="stylesheet" type="text/css" href="/styles/style.css">
-    <link rel="stylesheet" type="text/css" href="/styles/menu.css">
-    <link rel="stylesheet" type="text/css" href="/styles/framework.css">
-    <link rel="stylesheet" type="text/css" href="/styles/font-awesome.css">
-    <link rel="stylesheet" type="text/css" href="/styles/custom.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/menu.css">
+    <link rel="stylesheet" type="text/css" href="styles/framework.css">
+    <link rel="stylesheet" type="text/css" href="styles/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="styles/custom.css">
 
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyD06lrBSO9CM6KIOt6lajeJCs88RXvvdRc"></script>
-    <script type="text/javascript" src="/scripts/jquery.js"></script>
-    <script type="text/javascript" src="/scripts/plugins.js"></script>
-    <script type="text/javascript" src="/scripts/custom.js"></script>
+    <script type="text/javascript" src="scripts/jquery.js"></script>
+    <script type="text/javascript" src="scripts/plugins.js"></script>
+    <script type="text/javascript" src="scripts/custom.js"></script>
 </head>
 
 <body>
@@ -73,7 +73,7 @@
                     </div>
                     <div id="tab-2" class="tab-content" style="display: none;">
                         <div class="page-blog-list">
-                            <img data-original="/images/demo/modern-skopje.jpg" alt="img" class="preload-image responsive-image" src="/images/demo/modern-skopje.jpg" style="display: block;">
+                            <img data-original="/images/demo/modern-skopje.jpg" alt="img" class="preload-image responsive-image" src="images/demo/modern-skopje.jpg" style="display: block;">
                             <h4 class="page-blog-title">Телекомуникациски Центар Скопје</h4>
                             <div class="page-blog-tags-wrap">
                                 <strong class="page-blog-tags">Адреса: Орце Николов бб</strong>
@@ -142,25 +142,25 @@
                 <!--<p class="sidebar-divider">Navigation</p>-->
                 <div class="sidebar-menu">
                     <div>
-                        <a class="menu-item" href="/index.html">
+                        <a class="menu-item" href="index.html">
                             <i class="fa fa-home bg-red-dark"></i>
                             <em>Home</em>
                         </a>
                     </div>
                     <div>
-                        <a class="menu-item" href="/tour.html">
+                        <a class="menu-item" href="tour.html">
                             <i class="fa fa-navicon bg-green-dark"></i>
                             <em>Modernistic Tour</em>
                         </a>
                     </div>
                     <div>
-                        <a class="menu-item" href="/tour.html">
+                        <a class="menu-item" href="tour.html">
                             <i class="fa fa-navicon bg-green-dark"></i>
                             <em>Other Tour</em>
                         </a>
                     </div>
                     <div>
-                        <a class="menu-item" href="/contact.html">
+                        <a class="menu-item" href="contact.html">
                             <i class="fa fa-comment-o bg-blue-dark"></i>
                             <em>Contact Us</em>
                         </a>
@@ -224,7 +224,7 @@
 </body><a href="#" class="back-to-top-badge"><i class="fa fa-caret-up"></i>Back to top</a>
 
 
-<script type="text/javascript">
+<!--<script type="text/javascript">
     $("document").ready(function () {
         LoadMap();
     })
@@ -281,5 +281,5 @@
         }
     }
 
-</script>
+</script>-->
 
