--- a/www/tour.html
+++ b/www/tour.html
@@ -73,7 +73,7 @@
                     </div>
                     <div id="tab-2" class="tab-content" style="display: none;">
                         <div class="page-blog-list">
-                            <img data-original="/images/demo/modern-skopje.jpg" alt="img" class="preload-image responsive-image" src="images/demo/modern-skopje.jpg" style="display: block;">
+                            <img data-original="images/demo/modern-skopje.jpg" alt="img" class="preload-image responsive-image" src="images/demo/modern-skopje.jpg" style="display: block;">
                             <h4 class="page-blog-title">Телекомуникациски Центар Скопје</h4>
                             <div class="page-blog-tags-wrap">
                                 <strong class="page-blog-tags">Адреса: Орце Николов бб</strong>
@@ -85,7 +85,7 @@
                                     Поштенскиот комплекс бил реализиран во неколку етапи. Најпрво бил изграден Телекомуникацискиот систем за потребите на телеграфијата и телефонијата, сместен во кула и блок.... </span>
                                 </p>
                             </div>
-                            <a class="place-page-link" href="/place.html">Прочитај повеќе</a>
+                            <a class="place-page-link" href="place.html">Прочитај повеќе</a>
 
                             <img data-original="images/pictures/1.jpg" alt="img" class="preload-image responsive-image" src="images/pictures/1.jpg" style="display: block;">
                             <h4 class="page-blog-title">Телекомуникациски Центар Скопје</h4>
@@ -99,7 +99,7 @@
                                     Поштенскиот комплекс бил реализиран во неколку етапи. Најпрво бил изграден Телекомуникацискиот систем за потребите на телеграфијата и телефонијата, сместен во кула и блок.... </span>
                                 </p>
                             </div>
-                            <a class="place-page-link" href="/place.html">Прочитај повеќе</a>
+                            <a class="place-page-link" href="place.html">Прочитај повеќе</a>
                             <!--<div class="page-blog-list-by">
                                 <img class="preload-image" data-original="https://secure.gravatar.com/avatar/b33f1b2ae5ec688eef5a8d4e45353c3b" alt="img" src="https://secure.gravatar.com/avatar/b33f1b2ae5ec688eef5a8d4e45353c3b" style="display: block;">
                                 <strong>By: <a href="#">Enabled</a></strong>
