--- a/www/contact.html
+++ b/www/contact.html
@@ -23,7 +23,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
 
-    <title>Epsilon 5.0</title>
+    <title>Skopje Tours</title>
 
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <link rel="stylesheet" type="text/css" href="styles/menu.css">
@@ -112,7 +112,7 @@
                     <div class="one-half-responsive last-column">
                         <div class="container no-bottom">
                             <h4>HAEMUS</h4>
-                            <strong class="lh20">Center for scientific research and<br />promotion of culture</strong>
+                            <strong class="lh20 display-ib">Center for scientific research and<br />promotion of culture</strong>
                             <p class="lh20 mb10">We would like to introduce briefly our organization. We are founded in 2012 and until today we’ve grown up as the only organization of this kind in the Balkans. HAEMUS strives to promote scientific research and culture on the Balkan Peninsula, offering a wide range cultural heritage services. These fall into several categories, including: research, cultural resource management, publication, education, promotion and tourism.</p>
                             <p class="">
                                 <a href="tel: +38977432861" class="contact-call"><i class="fa fa-phone"></i>+ +389 77 432 861</a>
@@ -134,7 +134,6 @@
                             </p>-->
                         </div>
                     </div>
-                    <div class="decoration"></div>
                 </div>
                 <!--<div class="footer footer-dark">
                     <div class="footer-content">
