--- a/www/tour.html
+++ b/www/tour.html
@@ -82,21 +82,33 @@
                             <div class="page-blog-content">
                                 <p>
                                     Објектот е сместен на агол од два фреквентни булевари и доминира во просторот.
-                                    Поштенскиот комплекс бил реализиран во неколку етапи. Најпрво бил изграден Телекомуникацискиот систем за потребите на телеграфијата и телефонијата, сместен во кула и блок.... </span>
+                                    Поштенскиот комплекс бил реализиран во неколку етапи. Најпрво бил изграден Телекомуникацискиот систем за потребите на телеграфијата и телефонијата, сместен во кула и блок....
                                 </p>
                             </div>
                             <a class="place-page-link" href="place.html">Прочитај повеќе</a>
 
-                            <img data-original="images/pictures/1.jpg" alt="img" class="preload-image responsive-image" src="images/pictures/1.jpg" style="display: block;">
-                            <h4 class="page-blog-title">Телекомуникациски Центар Скопје</h4>
+                            <img data-original="images/demo/manu.jpg" alt="img" class="preload-image responsive-image" src="images/demo/manu.jpg" style="display: block;">
+                            <h4 class="page-blog-title">МАНУ (Македонска академија на науките и уметностите)</h4>
                             <div class="page-blog-tags-wrap">
-                                <strong class="page-blog-tags">Адреса: Орце Николов бб</strong>
-                                <strong class="page-blog-tags">Архитекти: Јанко Константинов</strong>
+                                <strong class="page-blog-tags">Адреса: Бул. „Крсте Петков Мисирков“, бр.2</strong>
+                                <strong class="page-blog-tags">Архитекти: Борис Чипан</strong>
                             </div>
                             <div class="page-blog-content">
                                 <p>
-                                    Објектот е сместен на агол од два фреквентни булевари и доминира во просторот.
-                                    Поштенскиот комплекс бил реализиран во неколку етапи. Најпрво бил изграден Телекомуникацискиот систем за потребите на телеграфијата и телефонијата, сместен во кула и блок.... </span>
+                                    Објектот на Македонската академија на науките и уметностите, како објект на највисокото научно тело на Република Македонија, претставува дел од широката групација на културни, образовни и научни институции, сместена во центарот на градот... 
+                                </p>
+                            </div>
+                            <a class="place-page-link" href="place.html">Прочитај повеќе</a>
+
+                            <img data-original="images/demo/mtv.jpg" alt="img" class="preload-image responsive-image" src="images/demo/mtv.jpg" style="display: block;">
+                            <h4 class="page-blog-title">Македонска радиотелевизија</h4>
+                            <div class="page-blog-tags-wrap">
+                                <strong class="page-blog-tags">Адреса:Бул. „Гоце Делчев“, бб</strong>
+                                <strong class="page-blog-tags">Архитекти: Харалампи Јосифовски, Нако Манов</strong>
+                            </div>
+                            <div class="page-blog-content">
+                                <p>
+                                    Објектот на некогашната Радио телевизија Скопје претставува сложена просторна целина, која има вертикален кубус за редакциите, поврзан со павилјоните на радиото и телевизијата, со сите потребни работни и технички простории...
                                 </p>
                             </div>
                             <a class="place-page-link" href="place.html">Прочитај повеќе</a>
