--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
 
-    <title>Skopje Tours</title>
+    <title>Epsilon 5.0</title>
 
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <link rel="stylesheet" type="text/css" href="styles/menu.css">
@@ -58,7 +58,6 @@
                                 <h4>Modernistic Tour <strong class="color-red-dark">Skopje</strong></h4>
                                 <p>Денешната слика за архитектурата на Скопје е настаната како резултат на повеќеслојни модернизациски потфати во текот на 20 век, кои успеале да претворат една отоманска паланка развиена...</p>
                                 <div class="decoration"></div>
-                                <!--<a href="#" class="share-cover show-share-bottom"><i class="fa fa-refresh"></i> Share Page</a>-->
                                 <a href="tour.html" class="read-cover">Open Tour<i class="fa fa-arrow-right"></i></a>
                             </div>
                             <div class="overlay"></div>
@@ -68,7 +67,6 @@
                                 <h4>Museum Tour <strong class="color-red-dark">Skopje</strong></h4>
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a ga...</p>
                                 <div class="decoration"></div>
-                                <<!--a href="#" class="share-cover show-share-bottom"><i class="fa fa-refresh"></i> Share Page</a>-->
                                 <a href="tour.html" class="read-cover">Open Tour<i class="fa fa-arrow-right"></i></a>
                             </div>
                             <div class="overlay"></div>
