--- a/www/contact.html
+++ b/www/contact.html
@@ -45,7 +45,7 @@
         <div class="header header-dark">
             <a href="#" class="header-icon-1 show-left-sidebar"><i class="fa fa-navicon"></i></a>
             <a href="#" class="header-logo"></a>
-            <!--<a href="#" class="header-icon-4 show-right-sidebar"><i class="fa fa-envelope-o"></i></a>-->
+            <a class="header-icon-4" href="index.html" title="back"><i class="fa fa-angle-left"></i></a>
         </div>
 
         <div id="page-content" class="page-content">
@@ -171,15 +171,21 @@
                         </a>
                     </div>
                     <div>
-                        <a class="menu-item" href="tour.html">
+                        <a class="menu-item" href="tours.html">
                             <i class="fa fa-navicon bg-green-dark"></i>
-                            <em>Modernistic Tour</em>
+                            <em>Tours</em>
                         </a>
                     </div>
                     <div>
-                        <a class="menu-item" href="tour.html">
+                        <a class="menu-item" href="map.html">
                             <i class="fa fa-navicon bg-green-dark"></i>
-                            <em>Other Tour</em>
+                            <em>Map</em>
+                        </a>
+                    </div>
+                    <div>
+                        <a class="menu-item" href="sitesCategories.html">
+                            <i class="fa fa-navicon bg-green-dark"></i>
+                            <em>Sites</em>
                         </a>
                     </div>
                     <div>
@@ -191,57 +197,26 @@
                 </div>
                 <p class="sidebar-divider">Let's get social</p>
                 <div class="sidebar-menu">
-                    <a class="default-link menu-item" href="https://www.facebook.com/enabled.labs">
+                    <a class="default-link menu-item" href="https://www.facebook.com/haemus.org.mk/">
                         <i class="fa fa-facebook facebook-color"></i>
                         <em>Facebook</em>
                     </a>
-                    <a class="default-link menu-item" href="https://twitter.com/iEnabled">
+                    <a class="default-link menu-item" href="https://twitter.com/haemusorg?lang=en">
                         <i class="fa fa-twitter twitter-color"></i>
                         <em>Twitter</em>
                     </a>
                     <!--<a class="default-link menu-item" href="https://plus.google.com/u/1/100477648973116025417/posts">
-                        <i class="fa fa-google-plus google-color"></i>
-                        <em>Google Plus</em>
-                    </a>
-                    <a class="default-link menu-item" href="#">
-                        <i class="fa fa-youtube-play youtube-color"></i>
-                        <em>YouTube</em>
-                    </a>-->
+                    <i class="fa fa-google-plus google-color"></i>
+                    <em>Google Plus</em>
+                </a>
+                <a class="default-link menu-item" href="#">
+                    <i class="fa fa-youtube-play youtube-color"></i>
+                    <em>YouTube</em>
+                </a>-->
                 </div>
                 <p class="sidebar-footer">Copyright 2015. All rights reserved</p>
             </div>
         </div>
-        <div class="share-bottom share-dark">
-            <h3>Share Page</h3>
-            <div class="share-socials-bottom">
-                <a href="https://www.facebook.com/sharer/sharer.php?u=http://www.themeforest.net/">
-                    <i class="fa fa-facebook facebook-color"></i>
-                    Facebook
-                </a>
-                <a href="https://twitter.com/home?status=Check%20out%20ThemeForest%20http://www.themeforest.net">
-                    <i class="fa fa-twitter twitter-color"></i>
-                    Twitter
-                </a>
-                <a href="https://plus.google.com/share?url=http://www.themeforest.net">
-                    <i class="fa fa-google-plus google-color"></i>
-                    Google
-                </a>
-                <a href="https://pinterest.com/pin/create/button/?url=http://www.themeforest.net/&media=https://0.s3.envato.com/files/63790821/profile-image.jpg&description=Themes%20and%20Templates">
-                    <i class="fa fa-pinterest-p pinterest-color"></i>
-                    Pinterest
-                </a>
-                <a href="sms:">
-                    <i class="fa fa-comment-o sms-color"></i>
-                    Text
-                </a>
-                <a href="mailto:?&subject=Check this page out!&body=http://www.themeforest.net">
-                    <i class="fa fa-envelope-o mail-color"></i>
-                    Email
-                </a>
-                <div class="clear"></div>
-            </div>
-        </div>
-
         <div class="background"></div>
     </div>
 </body><a href="#" class="back-to-top-badge"><i class="fa fa-caret-up"></i>Back to top</a>
