--- a/www/contact.html
+++ b/www/contact.html
@@ -44,7 +44,7 @@
 
         <div class="header header-dark">
             <a href="#" class="header-icon-1 show-left-sidebar"><i class="fa fa-navicon"></i></a>
-            <a href="#" class="header-logo"></a>
+            <a href="#" class="header-logo">THE MODERNIST ARHITECTURE<br />OF SKOPJE</a>
             <a class="header-icon-4" href="index.html" title="back"><i class="fa fa-angle-left"></i></a>
         </div>
 
