--- a/www/tour.html
+++ b/www/tour.html
@@ -42,7 +42,7 @@
         </div>
         <div class="header header-dark">
             <a href="#" class="header-icon-1 show-left-sidebar"><i class="fa fa-navicon"></i></a>
-            <a href="#" class="header-logo"></a>
+            <a href="#" class="header-logo">THE MODERNIST ARHITECTURE<br />OF SKOPJE</a>
             <a class="header-icon-4" href="tours.html" title="back"><i class="fa fa-angle-left"></i></a>
         </div>
         <div id="page-content" class="page-content">
