--- a/www/map.html
+++ b/www/map.html
@@ -33,6 +33,7 @@
     <script type="text/javascript" src="scripts/jquery.js"></script>
     <script type="text/javascript" src="scripts/plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
+    <script type="text/javascript" src="scripts/index.js"></script>
 </head>
 
 <body>
@@ -99,22 +100,14 @@
                 </div>
                 <p class="sidebar-divider">Let's get social</p>
                 <div class="sidebar-menu">
-                    <a class="default-link menu-item" href="https://www.facebook.com/haemus.org.mk/">
+                    <a class="default-link menu-item" onclick="window.open('https://www.facebook.com/haemus.org.mk/', '_system'); return false;">
                         <i class="fa fa-facebook facebook-color"></i>
                         <em>Facebook</em>
                     </a>
-                    <a class="default-link menu-item" href="https://twitter.com/haemusorg?lang=en">
+                    <a class="default-link menu-item" onclick="window.open('https://twitter.com/haemusorg?lang=en', '_system'); return false;">
                         <i class="fa fa-twitter twitter-color"></i>
                         <em>Twitter</em>
                     </a>
-                    <!--<a class="default-link menu-item" href="https://plus.google.com/u/1/100477648973116025417/posts">
-                    <i class="fa fa-google-plus google-color"></i>
-                    <em>Google Plus</em>
-                </a>
-                <a class="default-link menu-item" href="#">
-                    <i class="fa fa-youtube-play youtube-color"></i>
-                    <em>YouTube</em>
-                </a>-->
                 </div>
                 <p class="sidebar-footer">Copyright 2015. All rights reserved</p>
             </div>
