--- a/www/sitesCategories.html
+++ b/www/sitesCategories.html
@@ -32,6 +32,7 @@
     <script type="text/javascript" src="scripts/jquery.js"></script>
     <script type="text/javascript" src="scripts/plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
+    <script type="text/javascript" src="scripts/index.js"></script>
 </head>
 
 <body>
@@ -56,7 +57,7 @@
                         <i class="fa fa-building-o"></i>
                     </div>
                     <div class="overlay"></div>
-                    <img class="preload-image" data-original="images/demo/modern-skopje.jpg" alt="img">
+                    <img class="preload-image" data-original="images/demo/proba.jpg" alt="img">
                 </div>
 
                 <div class="content sites-categories-content">
@@ -116,26 +117,18 @@
                 </div>
                 <p class="sidebar-divider">Let's get social</p>
                 <div class="sidebar-menu">
-                    <a class="default-link menu-item" href="https://www.facebook.com/haemus.org.mk/">
+                    <a class="default-link menu-item" onclick="window.open('https://www.facebook.com/haemus.org.mk/', '_system'); return false;">
                         <i class="fa fa-facebook facebook-color"></i>
                         <em>Facebook</em>
                     </a>
-                    <a class="default-link menu-item" href="https://twitter.com/haemusorg?lang=en">
+                    <a class="default-link menu-item" onclick="window.open('https://twitter.com/haemusorg?lang=en', '_system'); return false;">
                         <i class="fa fa-twitter twitter-color"></i>
                         <em>Twitter</em>
                     </a>
-                    <!--<a class="default-link menu-item" href="https://plus.google.com/u/1/100477648973116025417/posts">
-                    <i class="fa fa-google-plus google-color"></i>
-                    <em>Google Plus</em>
-                </a>
-                <a class="default-link menu-item" href="#">
-                    <i class="fa fa-youtube-play youtube-color"></i>
-                    <em>YouTube</em>
-                </a>-->
                 </div>
                 <p class="sidebar-footer">Copyright 2015. All rights reserved</p>
             </div>
         </div>
         <div class="background"></div>
     </div>
-</body><a href="#" class="back-to-top-badge"><i class="fa fa-caret-up"></i>Back to top</a>
+</body><!--<a href="#" class="back-to-top-badge"><i class="fa fa-caret-up"></i>Back to top</a>-->
