--- a/www/tours.html
+++ b/www/tours.html
@@ -99,13 +99,11 @@
                 </div>
                 <p class="sidebar-divider">Let's get social</p>
                 <div class="sidebar-menu">
-                    <a href="#"  return false;">www.kidzout.com</a>
-
-                    <a class="default-link menu-item" onclick="window.open('https://www.facebook.com/haemus.org.mk/', '_system'); return false;">
+                    <a class="default-link menu-item" onclick="navigator.app.loadUrl('https://www.facebook.com/haemus.org.mk/', { openExternal:true});">
                         <i class="fa fa-facebook facebook-color"></i>
                         <em>Facebook</em>
                     </a>
-                    <a class="default-link menu-item" onclick="window.open('https://twitter.com/haemusorg?lang=en', '_system'); return false;">
+                    <a class="default-link menu-item" onclick="navigator.app.loadUrl('https://twitter.com/haemusorg?lang=en', { openExternal:true });">
                         <i class="fa fa-twitter twitter-color"></i>
                         <em>Twitter</em>
                     </a>
