--- a/www/place.html
+++ b/www/place.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" type="text/css" href="styles/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="styles/custom.css">
 
+    <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="scripts/jquery.js"></script>
     <script type="text/javascript" src="scripts/plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
@@ -149,11 +150,11 @@
                 </div>
                 <p class="sidebar-divider">Let's get social</p>
                 <div class="sidebar-menu">
-                    <a class="default-link menu-item" onclick="window.open('https://www.facebook.com/haemus.org.mk/', '_system'); return false;">
+                    <a class="default-link menu-item" onclick="navigator.app.loadUrl('https://www.facebook.com/haemus.org.mk/', { openExternal:true});">
                         <i class="fa fa-facebook facebook-color"></i>
                         <em>Facebook</em>
                     </a>
-                    <a class="default-link menu-item" onclick="window.open('https://twitter.com/haemusorg?lang=en', '_system'); return false;">
+                    <a class="default-link menu-item" onclick="navigator.app.loadUrl('https://twitter.com/haemusorg?lang=en', { openExternal:true });">
                         <i class="fa fa-twitter twitter-color"></i>
                         <em>Twitter</em>
                     </a>
