--- a/www/sitesCategories.html
+++ b/www/sitesCategories.html
@@ -63,12 +63,11 @@
 
                 <div class="content sites-categories-content">
                     <div id="sitecategories-wrap" class="sites-categories-images-wrap">
-                        <a href="sites.html" class="" title="Your caption here!"><img class="preload-image responsive-image" data-original="images/demo/stoneBridge.png" alt="img"><span>Museums</span></a>
+                        <!--<a href="sites.html" class="" title="Your caption here!"><img class="preload-image responsive-image" data-original="images/demo/stoneBridge.png" alt="img"><span>Museums</span></a>
                         <a href="sites.html" class="" title="Your caption here!"><img class="preload-image responsive-image" data-original="images/demo/stoneBridge.png" alt="img"><span>Landmarks</span></a>
                         <a href="sites.html" class="" title="Your caption here!"><img class="preload-image responsive-image" data-original="images/demo/stoneBridge.png" alt="img"><span>Parks</span></a>
                         <a href="sites.html" class="" title="Your caption here!"><img class="preload-image responsive-image" data-original="images/demo/stoneBridge.png" alt="img"><span>Art galleries</span>s</a>
-                        <a href="sites.html" class="" title="Your caption here!"><img class="preload-image responsive-image" data-original="images/demo/stoneBridge.png" alt="img"><span>Shopping</span></a>
-                   
+                        <a href="sites.html" class="" title="Your caption here!"><img class="preload-image responsive-image" data-original="images/demo/stoneBridge.png" alt="img"><span>Shopping</span></a>-->
                     </div>
                 </div>
             </div>
